<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cntt.dbom.loveapp.AboutActivity$PlaceholderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/section_label"
        android:layout_weight="1"
        android:padding="20dp"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="You rase me up"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18dp"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/singYourasemeup1"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="5dp"
            />
        <TextView
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/singYourasemeup2"
            android:layout_gravity="center"
            android:gravity="center"
            />
        <TextView
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/singYourasemeup3"
            android:layout_gravity="center"
            android:gravity="center"
            />
        <TextView
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/singYourasemeup4"
            android:layout_gravity="center"
            android:gravity="center"
            />
    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="100dp"

        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <com.cntt.dbom.loveapp.design.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                app:civ_border_width="1dp"
                app:civ_border_color="#FFF"
                android:id="@+id/image_avatar_man"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/avatarvip"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/hello"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/primary"
                android:textSize="15dp"
                />
            <com.cntt.dbom.loveapp.design.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                app:civ_border_width="1dp"
                app:civ_border_color="#FFF"
                android:id="@+id/image_avatar_women"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/avatarvip"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
           >

            <TextView
                android:ems="10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/name_WeOne"
                android:layout_weight="1"
                android:hint="@string/Input_WeTwo"
                android:gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:textAlignment="center"

                android:textColor="@color/primary"

                />
            <TextView
                android:ems="10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/name_WeTwo"
                android:layout_weight="1"
                android:hint="@string/Input_WeOne"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/email_one"
                android:layout_weight="1"
                android:hint="@string/emailOne"
                android:gravity="center"
                android:textSize="11dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:textSize="16sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/email_two"
                android:layout_weight="1"
                android:hint="@string/emailTwo"
                android:gravity="center"
                android:textSize="11dp"/>
        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_action_about"
            android:layout_gravity="center"/>

    </LinearLayout>
</LinearLayout>
